# symfony-claude-context-engine

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  install.py  pyproject.toml  sources.yaml.example
.claude/: settings.json
docs/: ARCHITECTURE.md
hooks/: post-tool-use.py  pre-compact.py  session-end.py  session-start.py  user-prompt-submit.py
scripts/: ast_chunker.py  bm25_store.py  canary.py  check-plugin-updates.py  check_update.py  chroma_lock.py  chunk_daily.py  codebase_store.py  communities.py  compile.py  compile_truth.py  config.py  cost_report.py  crosslink.py  export_graph.py  flush.py  hybrid_search.py  import_agent_history.py  index_codebase.py  ingest.py  ingest_scenarios.py  ingest_state.py  knowledge_mcp_server.py  linked_search.py  lint.py  lint_fixes.py  mcp_server.py  mermaid_render.py  notify.py  parent_watchdog.py  query.py  reindex.py  release.py  search_scenarios.py  unified_graph.py  upgrade.py  utils.py  vector_store.py  viewer.py  watch.py
scripts/agent_adapters/: __init__.py  claude.py  codex.py
scripts/parsers/: __init__.py  call_graph.py  git_intel.py  php_graph.py  route_map.py  stimulus_map.py  twig_graph.py
scripts/source_handlers/: __init__.py  markdown.py
scripts/viewer_templates/: article.html  articles.html  base.html  code.html  contradictions.html  daily.html  daily_detail.html  index.html  stats.html  tools_detail.html  tools_list.html  whisper.html
scripts/whisper/: enhance.py  expand_query.py  orchestrator.py  prompts.py  retrieve.py  transcribe.py  types.py
tests/: test_ast_chunker.py  test_bm25_store.py  test_canary.py  test_chunk_daily.py  test_codebase_store.py  test_communities.py  test_compile_truth.py  test_crosslink.py  test_embed_article_file.py  test_export_graph.py  test_flush_tool_drawer.py  test_hybrid_search.py  test_import_agent_history.py  test_index_codebase.py  test_integration.py  test_knowledge_mcp.py  test_lint_fixes.py  test_lint_link_scope.py  test_lint_memory_types.py  test_mcp_neighborhood.py  test_mcp_server.py  test_post_tool_use_hook.py  test_query.py  test_release.py  test_scaffold.py  test_unified_graph.py  test_utils_anchors.py  test_utils_slug_chunk.py  test_vector_store.py  test_viewer.py
tests/parsers/: test_call_graph.py  test_git_intel.py  test_interface.py  test_php_graph.py  (+3 more)
whisper_tray/: app_state.py  audio_recorder.py  history.py  hotkey_listener.py  injector.py  main.py  pill.py  settings.py  settings_window.py  tray.py
(+35 files in other folders)
