[project]
name = "llm-personal-kb"
version = "0.1.0"
description = "Personal knowledge base compiled from AI conversations - inspired by Karpathy's LLM KB architecture"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "mcp[cli]>=1.27.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tzdata>=2024.1",
    "chromadb>=0.5.0",
    "onnxruntime>=1.18.0",
    "rank-bm25>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.0",
    "markdown-it-py>=3.0.0",
    "httpx>=0.27.0",
    "faster-whisper>=1.0.3",
    "anthropic>=0.42.0",
    "pynput>=1.7.7",
    "sounddevice>=0.5.1",
    "scipy>=1.14.0",
    "pystray>=0.19.5",
    "Pillow>=11.0.0",
    "pyperclip>=1.9.0",
    "pyautogui>=0.9.54",
    "tree-sitter>=0.25.2",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-javascript>=0.25.0",
    "psutil>=6.0.0",
]

[tool.ruff]
line-length = 100

[project.scripts]
whisper-tray = "whisper_tray.main:main"

[tool.pytest.ini_options]
pythonpath = [".", "scripts"]
testpaths = ["tests"]
